
2016-03-15  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.h [_MSC_VER]: added missing defines / include for implementations
	  of COBPRINTER and COB_CURRENT_DATE

2016-03-15 Ron Norman <rjn@inglenet.com>
	* runtime.cfg Comments updated
	  common.c display COB_PRE_LOAD as set and as evaluated
	  call.c clears COB_PRE_LOAD value before evaluating

2016-03-07 Ron Norman <rjn@inglenet.com>

	* fileio.c fixed EXTFH to save/restore 'opts' value for some
	  READ/WRITE operations. Without this it was not writing LF
	  at end of line sequential records

2016-02-01 Ron Norman <rjn@inglenet.com>

	* fileio.c fixed to call cob_set_exception for the EXTFH interface

2016-01-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobgetopt.c (cob_getopt_long_long): Fix bug #194 and warnings of msc code
	  analysis (possible memory issues) - switched from alloca to cobc's
	  internal memory handling (cobc_malloc and cobc_free)

2016-01-01 Ron Norman <rjn@inglenet.com>

	* common.c,common.h,coblocal.h,termio.c: 
	  added cob_set_runtime_option routine to allow TRACE and/or DISPLAY
	  UPON PRINTER output to be redirected to a specific (FILE*)

2015-10-24  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (conf_runtime_error): add function for configuration specific
	  errors and tweaked the messages
	* common.c (set_config_val): added possible values for gc_conf.enums
	  to error messages; added check of maximum values for ENV_SIZE
	* common.c (cob_load_config_file): if include file is not found prefix
	  it with path of current loaded configuration file
	* common.c: tweaked output for --runtime-env and added function
	  (set_config_val_by_name) for overriding default values (used for USERNAME)

2015-10-10  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c [WIN32][MINGW]: tweaking of additional environment settings

2015-10-10 Ron Norman <rjn@inglenet.com>
