@@ -1,4 +1,7 @@
 
+2016-04-16 Ron Norman <rjn@inglenet.com>
+	* common.c report error for undefined environment variables
+
 2016-03-15  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* common.h [_MSC_VER]: added missing defines / include for implementations
